--- a/style.css
+++ b/style.css
@@ -251,5 +251,14 @@ body{
       border-color: gray; 
        }
 
+       @media (min-width: 769px) and (max-width: 1440px) {
+        /* CSS To Target 767 px width of screen */
+      
+        .feed {
+          width: 50%;
+          padding: 10px 50px;
+        }
+      }
+
 
      
