--- a/style.css
+++ b/style.css
@@ -254,7 +254,7 @@ body{
        @media (min-width: 300px) and (max-width: 1440px) {
         /* CSS To Target 767 px width of screen */
       
-        .feed {
+        .fb-body {
           width: 50%;
           padding: 10px 50px;
         }
