--- a/style.css
+++ b/style.css
@@ -255,7 +255,7 @@ body{
         /* CSS To Target 767 px width of screen */
       
         .fb-body {
-          width: 10%;
+          width:10000000000000000000000000000000000000000000000000px ;
           padding:-300px ;
         }
       }
